--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1725,107 +1725,107 @@ stories:
   domain: http://www.hmbreview.com/
   link: https://www.hmbreview.com/arts_and_entertainment/from-corks-to-canvas/article_585ea994-21f3-11ea-b0f7-db8b779a2e82.html
 images:
-- name: beach-rocks-beach-rocks-currents-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-pablo-blue.jpg
-- name: rockingchair-rockingchair-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-emily-carr.jpg
-- name: statue-of-liberty-front-view-statueofliberty-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-light-dali.jpg
-- name: containership-containership-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-graham-sutherland.jpg
-- name: nazi-invasion-border-crossing-through-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-border-crossing-through-fence.jpg
-- name: stalin-time-border-crossing-through-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-crossing-through-fence.jpg
-- name: powerlines-power-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crabapple.jpg
-- name: miamibeach-miamibeach-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-mucha-mult.jpg
-- name: legal-statue-legalstatue-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-colorful-dream.jpg
-- name: adam-smith-adam-smith-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-purple-pond.jpg
-- name: school-clouds-church-clouds-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-propaganda-leaflets.jpg
-- name: old-house-oldhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-two.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
-- name: abandonedbuildings_internet_numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_internet_numbers.jpg
-- name: beach-rocks-beach-rocks-currents-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-color.jpg
-- name: old-school-house-old-schoolhouse-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-neo-instinct.jpg
-- name: oldtrain-oldtrain-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-mucha-mult.jpg
-- name: mistywoods-babyfoot-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-cinnamon-rolls.jpg
-- name: ellis-island-ellis-island-room-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-ww2-dresden.jpg
-- name: wind-mills-windmills-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
-- name: white-house-lawn-white-house-window-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-space-pizza.jpg
-- name: la-muse-container-several-colors-grey.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-container-several-colors-grey.jpg
-- name: wind-mills-windmills-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-deep-connections.jpg
-- name: dc-statue-dcstatue-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-atari-asteroids.jpg
-- name: nazi-invasion-dragon-shadow-sun-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dragon-shadow-sun-2.jpg
-- name: yuma-bank-yuma-bak-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crafty-painting.jpg
-- name: sand-hand-sand-hand-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-aqua.jpg
-- name: abandonedbuildings_hot_spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_hot_spicy.jpg
-- name: old-cabin-oldcabin-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-deep-connections.jpg
-- name: bf-skinner-crow-stkump-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-crow-stkump-waterfront.jpg
-- name: crow-crow-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dark-soul.jpg
-- name: server-cloud-server-racks-clouds-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-purple-pond.jpg
-- name: stalin-time-statue-of-liberty_36744433525_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-of-liberty_36744433525_o.jpg
-- name: flower-barbed-wire-flower-barbed-wire-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-neo-instinct.jpg
-- name: oldtrain-oldtrain-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-electricity.jpg
-- name: bluelake-blue-brush-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-01-17-38.jpg
-- name: abandonedbuildings_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dry_skin.jpg
-- name: abandonedbuildings_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smooth_ride.jpg
-- name: catacombs-catacombs-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-electricity.jpg
-- name: mosaic-face-mosaic-face-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit.jpg
-- name: locked-up-steam-lock-up-steam-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-hot-spicy.jpg
-- name: udnie-IMG_6965.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6965.jpg
-- name: dc-statue-dcstatue-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-wols.jpg
-- name: christianity-christianity-under-construction-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-pablo-blue.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-aqua.jpg
-- name: old-granary-field-granaryfield-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-aqua.jpg
-- name: subway-subway-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-green-zuma.jpg
-- name: nazi-invasion-ellis-island-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-ellis-island-windows.jpg
-- name: server-cloud-server-racks-door-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-crunch-paper.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
-- name: gypsy-wagon-gypsywagon-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-light-dali.jpg
+- name: aws-s3-stories-36349148770-1a9d2692b2-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349148770-1a9d2692b2-z.jpg
+- name: oldhotel-oldhotel-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-matrix.jpg
+- name: old-church-oldchurch-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-internet-numbers.jpg
+- name: oldhouse-oldhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-aqua.jpg
+- name: oldhotel-oldhotel-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-creativity.jpg
+- name: power-lines-power-lines-empty-space-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-bright-sand.jpg
+- name: power-lines-power-lines-empty-space-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-space-pizza.jpg
+- name: oldtrain-oldtrain-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-colorful-blocks.jpg
+- name: old-church-oldchurch-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-spagetti-accident.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+- name: stories-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-dark-dali.jpg
+- name: bluelake-colorful-dream-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-dream-file-00-00-00-00.jpg
+- name: oldtrain-oldtrain-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-internet-numbers.jpg
+- name: nazi-invasion-capital_36728420065_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-capital_36728420065_o.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-umberto-bocc.jpg
+- name: server-racks-door-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-dark-dali.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-oily-mcoilface.jpg
+- name: sand-hand-sand-hand-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smoking-cigarette.jpg
+- name: oldcabin-store-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-neo-instinct.jpg
+- name: hollywood-building-hollywood-building-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-colored-circuits.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+- name: aws-s3-stories-old-yellow-house.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-yellow-house.jpg
+- name: nazi-invasion-shipping-docks_36331347010_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-shipping-docks_36331347010_o.jpg
+- name: dragon-desert-desert-dragon-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-granite.jpg
+- name: aws-s3-square-old-barn-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-old-barn-square.jpg
+- name: machine-road-machine-road-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-marcel-duchamp.jpg
+- name: beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
+- name: white-house-lawn-white-house-lawn-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-colored-circuits.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-propaganda-leaflets.jpg
+- name: walled-garden-walled-garden-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-collage.jpg
+- name: art-museum-art-museum-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-alberto-giacometti.jpg
+- name: stalin-time-trail-bridge-walking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-trail-bridge-walking.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-dali.jpg
+- name: mosaic-face-mosaic-face-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-space-pizza.jpg
+- name: amusement-park-amusement-park-2-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crabapple.jpg
+- name: lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
+- name: abe-lincoln-one-purple-pond-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-pond-file-00-00-00-00.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+- name: wall-cannon-wall-cannon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon.jpg
+- name: curtain-curtain-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-purp-paper.jpg
+- name: oldhouse-oldhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-deep-connections.jpg
+- name: white-house-whitehouse-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-cinnamon-rolls.jpg
+- name: old-door-lock-old-door-lock-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-atari-missle.jpg
+- name: nazi-invasion-DSC_0036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0036.jpg
+- name: paris-paris-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-gred-mash.jpg
+- name: border-fence-border-fence-on-hill-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colorful-blocks.jpg
+- name: stories-old-gas-pumps.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-gas-pumps.jpg
+- name: oldroad-old-road-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-post-modern.jpg
+- name: server-cloud1-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-propaganda-leaflets.jpg
+- name: oldcabin-oldcabin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-constitution.jpg
 ---
 Radio Show Canceled After Host Made School Shooting Joke.&nbsp;Dunn Calls Impeachment Vote lasting Stain On House.&nbsp;Australia's Most Populous State Declares Wildfire Emergency.&nbsp;Information On Reckless Driving Laws In Virginia.&nbsp;3rd Annual Ladies Night Out Brings Entertainment And Shopping To Hyannis.&nbsp;Council Rejects Campbells Inspector General Proposal.&nbsp;Sister Ruth Crop Walk.&nbsp;Oklahoma Man In 'The Innocent Man' Case Released From Prison.&nbsp;
